--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 html,
 body {
   height: 100%;
-  background-color: #161d2f;
+  background-color: #10141e;
   position: relative;
   overflow-x: hidden;
 }
